style.css
/* Base Page Styles */
body, html {
    margin: 0;
    padding: 0;
    width: 100%;
    height: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    background-color: #F5F5F5;
    overflow: hidden;
}

.container, .preferences-container {
    text-align: center;
    padding: 20px;
    max-width: 700px;
    margin: auto;
    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
    border-radius: 10px;
    background: #FFF;
}

/* Headings and Text */
h1, h2 {
    color: #00356B;
    margin-bottom: 30px;
    font-size: 2em;
}

.instruction, p {
    font-size: 1.5em;
    margin: 20px 0;
    color: #00356B;
    font-weight: bold;
}

.instructions p, .preferences-container p {
    margin: 10px 0;
    font-size: 1em;
    color: #000;
}

.yale-blue {
    color: #00356B;
    font-weight: bold;
}

/* Buttons and Action Items */
.action-button, .start-over, .search, .option, .start {
    padding: 30px 45px;
    cursor: pointer;
    font-size: 1.2em;
    border-radius: 5px;
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
    color: #00356B;
    border: 2px solid #00356B;
    background-size: 200% 100%;
    background-position: right bottom;
    background-image: linear-gradient(to left, #FFFFFF 50%, #00356B 50%);
    overflow: hidden;
    position: relative;
}

.action-button:hover, .start-over:hover, .search:hover, .start:hover, .option:hover {
    background-position: left bottom;
    color: #FFFFFF;
    transform: scale(1.05);
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
    transition: background-position 2s linear, color 2s ease; /* Apply transition to background-position on hover */
}

.hovering {
    background-position: left bottom;
    color: #FFFFFF;
    transform: scale(1.05);
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
    transition: background-position 2s linear, color 2s ease;
}

.help-button {
    position: absolute;
    top: 3vh; /* 3% from the top of the viewport */
    left: 3vh; /* 3% from the left of the viewport */
    background-color: #00356B;
    color: #FFFFFF;
    border: none;
    padding: 2vh; /* Padding based on viewport height */
    font-size: 4.5vh; /* Font size based on viewport height */
    width: 10vh; /* Width based on viewport height to maintain aspect ratio */
    height: 10vh; /* Height based on viewport height */
    border-radius: 50%; /* Maintains a circular shape */
    cursor: pointer;
    transition: transform 0.3s ease, background-color 0.3s ease;
    z-index: 1000; /* Ensures the button is above other elements */
    display: flex;
    align-items: center;
    justify-content: center; /* Center the '?' inside the button */
    left: 15%
}

.help-button:hover {
    transform: scale(1.1); /* Slightly larger on hover */
    background-color: #002244; /* Darker on hover */
}

/* Toggle Switch Styles
.switch {
    position: relative;
    display: inline-block;
    width: 120px;
    height: 60px;
    margin: 0 30px;
}

.switch input {
    opacity: 0;
    width: 0;
    height: 0;
}

.slider {
    position: absolute;
    cursor: pointer;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: #ccc;
    transition: .4s;
    border-radius: 60px;
}

.slider:before {
    position: absolute;
    content: "";
    height: 52px;
    width: 52px;
    left: 4px;
    bottom: 4px;
    background-color: white;
    transition: .4s;
    border-radius: 50%;
}

input:checked + .slider {
    background-color: #00356B;
}

input:focus + .slider {
    box-shadow: 0 0 1px #00356B;
}

input:checked + .slider:before {
    -webkit-transform: translateX(60px);
    transform: translateX(60px);
}

.slider.round {
    border-radius: 60px;
}

.slider.round:before {
    border-radius: 50%;
} */


.options-group {
    display: flex;
    align-items: center;
    justify-content: space-evenly;
    margin-top: 50px;
    margin-bottom: 50px;
}

.options-group span {
    flex: 1; /* Gives equal space to the text on either side of the slider */
    text-align: center;
    color: #00356B; /* Yale Blue */
    font-weight: bold;
}

/* Position buttons at the bottom corners */
.start-over, .search {
    position: fixed;
    bottom: 20px;
    /* Ensuring they stay out of the flow of the white container */
}

.start-over {
    left: 20px;
    /* Styles for the button */
}

.search {
    right: 20px;
    /* Styles for the button */
}

/* Ensure the help button doesn't overlap with the fixed buttons */
.help-button {
    z-index: 1000; /* Ensures the button is above other elements */
}

/* Additional responsive positioning for mobile or smaller screens */
@media (max-width: 768px) {
    .options-group {
        flex-direction: column;
    }

    .start-over, .search {
        width: auto; /* Or specific size for smaller screens */
        padding: 10px; /* Adjust as necessary */
        font-size: smaller; /* Adjust as necessary */
    }
}

/* Base styles for tri-state switch container */
.tri-state-switch {

    font-size: 1.2em;
    display: flex;
    justify-content: space-between;
    margin: 10px 0;
}

/* Hide the radio buttons visually, but keep them accessible */
.tri-state-switch input[type="radio"] {
    position: absolute;
    opacity: 0;
    width: 0;
    height: 0;
    margin: 0;
}

/* Style the labels to look like toggle parts */
.tri-state-switch label {
    background-color: #ccc;
    padding: 10px 20px;
    border: 1px solid #ddd;
    flex-grow: 1;
    text-align: center;
    cursor: pointer;
    transition: background-color 0.25s ease-out;
}

/* Highlight the selected option */
.tri-state-switch input[type="radio"]:checked + label {
    background-color: #00356B;
    color: white;
}

.option-buttons {
    background-color: #CCCCCC;
    /* color: #FFFFFF; */
    border: none;
    padding: 10px 15px;
    font-size: 1.2em;
}

.options-buttons-clicked {
    background-color: #00356B;
    color: white;
}


/* Round the corners on the ends */
.left-option {
    border-radius: 15px 0 0 15px;
}


.right-option {
    border-radius: 0 15px 15px 0;
}


/* Round the corners on the ends */
.left-option {
    border-radius: 15px 0 0 15px;
}


.right-option {
    border-radius: 0 15px 15px 0;
}

/* Special style for the middle option */
.middle-option {
    border-left: none;
    border-right: none;
}

/* Loading Page */
.loading-container {
    width: 100%;
    height: 20px;
    background-color: #E0E0E0;
    border-radius: 10px;
    margin: 20px 0;
    overflow: hidden;
}

.loading-bar {
    height: 100%;
    width: 0%;
    background-color: #00356B;
    border-radius: 10px;
    animation: loading 2s linear forwards;
}

@keyframes loading {
    0% {
        width: 0%;
    }
    50% {
        width: 50%;
    }
    100% {
        width: 100%;
    }
}

/* Recommendation Page Styles */
/* ... existing styles ... */

.recommendation-container {
    /* Adjust the max-width if necessary to fit your screen */
    max-width: 1000px;
    padding: 20px;
    margin: 2% auto;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.spot-image-container {
    border: 3px solid #00356B; /* Yale Blue border */
    display: flex;
    justify-content: center;
    margin: 20px 0;
}

#study-spot-image {
    max-width: 80%;
    max-height: 500px; /* Adjust based on your layout needs */
}

/* Start Over and Go Back button styles */
.start-over, .go-back {
    background-color: #FFFFFF;
    color: #00356B;
    border: 2px solid #00356B;
    padding: 15px 30px;
    font-size: 1.2em;
    border-radius: 5px;
    position: fixed;
    bottom: 20px;
    margin: 10px;
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
}

.start-over:hover, .go-back:hover {
    background-color: #00356B;
    color: white;
}

/* Adjusting the positions */
.start-over {
    left: 20px; /* Bottom left corner */
}

.go-back {
    right: 20px; /* Bottom right corner */
}

/* "Show me More" button style */
.more-info-button {
    background-color: #00356B; /* Yale Blue background */
    color: white;
    font-size: 1.2em;
    border-radius: 5px;
    margin: 10px;
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
    position: absolute; /* Position it absolutely to the container */
    right: 10%; /* Distance from the right - adjust as necessary */
    top: 50%; /* Align to the vertical center of the container */
    transform: translate(-50%, -50%); /* Center the button */
    display: block; /* Block display to fill the width and height */
    width: 60px; /* Width of the button */
    height: 60px; /* Height of the button */
    line-height: 60px; /* Align the ">" character vertically */
    text-align: center; /* Align the ">" character horizontally */
    cursor: pointer; /* Cursor pointer to indicate button */
    border: none; /* No border unless you want one */
    padding: 0; /* Reset padding to 0 */
}

.more-info-button:hover {
    background-color: #002244; /* A darker shade of Yale Blue */
}



.help-container {
    max-width: 700px;
    margin: auto;
    text-align: center;
    padding: 20px;
    background: #FFF;
    border-radius: 10px;
    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
}

.help-list {
    list-style: none;
    padding: 0;
}

.help-list li {
    font-size: 1.5em;
    margin: 20px 0;
    color: #00356B;
}

.help-list .yale-blue {
    color: #00356B;
    font-weight: bold;
}

.start-over {
    background-color: #FFFFFF;
    color: #00356B;
    border: 2px solid #00356B;
    padding: 15px 30px;
    font-size: 1.2em;
    border-radius: 5px;
    cursor: pointer;
    margin-top: 30px;
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
}

.start-over:hover {
    background-color: #00356B;
    color: #FFFFFF;
}


/* style.css */
.go-back-help {
    position: absolute;
    top: 20px;
    /* left: 20px; Position it on the right for distinction */
    background-color: #00356B;
    color: #FFFFFF;
    border: none;
    padding: 15px 20px; /* Increased padding */
    font-size: 1.4em; /* Larger font size */
    border-radius: 50%; /* Maintain the circular shape */
    cursor: pointer;
    transition: transform 0.3s ease, background-color 0.3s ease; /* Consistent transition effects */
    left: 15%
}

.go-back-help:hover {
    transform: scale(1.1); /* Slightly larger on hover */
    background-color: #002244; /* Darker on hover */
}


.start-over, .search, .go-back {
    padding: 20px 35px; /* Increased padding to make buttons bigger */
    font-size: 1.4em; /* Increased font size for larger text */
    color: #00356B;
    border: 2px solid #00356B;
    border-radius: 5px;
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
    position: fixed;
    bottom: 3vh; /* 3% from the bottom for better vertical positioning */
    transition: background-color 0.3s ease, transform 0.3s ease;
    z-index: 1000; /* Ensures the button is above other elements */
}

.start-over:hover, .search:hover, .go-back:hover {
    background-color: #00356B;
    color: #FFFFFF;
    transform: scale(1.1);
}

.start-over {
    left: 15%; /* Moved towards the center */
}

.search {
    right: 15%; /* Moved towards the center */
}

.go-back {
    right: 15%; /* Align with the search button on the opposite side */
}

@media (max-width: 768px) {
    .start-over, .search, .go-back {
        width: auto;
        padding: 10px 15px; /* Adjusted padding for smaller screens */
        font-size: 1.1em; /* Adjusted font size for smaller screens */
    }
}

